data/derived/comb/progs/unify/prog4242.ml.out
Characters 51-58:
  g (f b)
  ^^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
